# os_filesystem

./: .gitmodules  CMakeLists.txt  Doxyfile  LICENSE.md  README.md
include/: OS_FileSystem.h  OS_FileSystem_int.h
include/lib/: FatFs.h  FatFsFile.h  LittleFs.h  LittleFsFile.h  SpifFs.h  SpifFsFile.h
src/: OS_FileSystem.c  OS_FileSystemFile.c
src/lib/: FatFs.c  FatFsFile.c  LittleFs.c  LittleFsFile.c  SpifFs.c  SpifFsFile.c
